@@ -32,6 +32,7 @@ struct Mono_Posix_Utimbuf;
 int Mono_Posix_FromAccessMode (int value, int* rval);
 int Mono_Posix_FromAccessModes (int value, int* rval);
 int Mono_Posix_FromConfStr (int value, int* rval);
+int Mono_Posix_FromConfstrName (int value, int* rval);
 int Mono_Posix_FromDirectoryNotifyFlags (int value, int* rval);
 int Mono_Posix_FromErrno (int value, int* rval);
 int Mono_Posix_FromError (int value, int* rval);
@@ -48,12 +49,14 @@ int Mono_Posix_FromMremapFlags (guint64 value, guint64* rval);
 int Mono_Posix_FromMsyncFlags (int value, int* rval);
 int Mono_Posix_FromOpenFlags (int value, int* rval);
 int Mono_Posix_FromPathConf (int value, int* rval);
+int Mono_Posix_FromPathconfName (int value, int* rval);
 int Mono_Posix_FromPollEvents (short value, short* rval);
 int Mono_Posix_FromPosixFadviseAdvice (int value, int* rval);
 int Mono_Posix_FromPosixMadviseAdvice (int value, int* rval);
 int Mono_Posix_FromSeekFlags (short value, short* rval);
 int Mono_Posix_FromSignum (int value, int* rval);
 int Mono_Posix_FromSysConf (int value, int* rval);
+int Mono_Posix_FromSysconfName (int value, int* rval);
 int Mono_Posix_FromSyslogFacility (int value, int* rval);
 int Mono_Posix_FromSyslogLevel (int value, int* rval);
 int Mono_Posix_FromSyslogOptions (int value, int* rval);
@@ -212,6 +215,7 @@ gint64 Mono_Posix_Syscall_write (int fd, void* buf, guint64 count);
 int Mono_Posix_ToAccessMode (int value, int* rval);
 int Mono_Posix_ToAccessModes (int value, int* rval);
 int Mono_Posix_ToConfStr (int value, int* rval);
+int Mono_Posix_ToConfstrName (int value, int* rval);
 int Mono_Posix_ToDirectoryNotifyFlags (int value, int* rval);
 int Mono_Posix_ToErrno (int value, int* rval);
 int Mono_Posix_ToError (int value, int* rval);
@@ -228,12 +232,14 @@ int Mono_Posix_ToMremapFlags (guint64 value, guint64* rval);
 int Mono_Posix_ToMsyncFlags (int value, int* rval);
 int Mono_Posix_ToOpenFlags (int value, int* rval);
 int Mono_Posix_ToPathConf (int value, int* rval);
+int Mono_Posix_ToPathconfName (int value, int* rval);
 int Mono_Posix_ToPollEvents (short value, short* rval);
 int Mono_Posix_ToPosixFadviseAdvice (int value, int* rval);
 int Mono_Posix_ToPosixMadviseAdvice (int value, int* rval);
 int Mono_Posix_ToSeekFlags (short value, short* rval);
 int Mono_Posix_ToSignum (int value, int* rval);
 int Mono_Posix_ToSysConf (int value, int* rval);
+int Mono_Posix_ToSysconfName (int value, int* rval);
 int Mono_Posix_ToSyslogFacility (int value, int* rval);
 int Mono_Posix_ToSyslogLevel (int value, int* rval);
 int Mono_Posix_ToSyslogOptions (int value, int* rval);
